--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -1,66 +1,78 @@
 // Colors
 
-@text-color: #aaa;
-@text-color-subtle: #555;
-@text-color-highlight: #fff;
+// Observify Colors
+@light-blue: #edf0f9;
+@dark-blue: #151e28;
+@blue: #019cdf;
+@green: #35b197;
+@red: #e94d5a;
+@orange: #f66e3a;
+@pink: #f583b6;
+@purple: #7e4894;
+@black: #000;
+@white: #fff;
+
+@text-color: @white;
+@text-color-subtle: rgba(255, 255, 255, .25);
+@text-color-highlight: @white;
 @text-color-selected: @text-color-highlight;
 
-@text-color-info: #5293d8;
-@text-color-success: #2BDA77;
-@text-color-warning: #ff982d;
-@text-color-error: #c00;
+@text-color-info: lighten(@blue, 30%);
+@text-color-success: lighten(@green, 30%);
+@text-color-warning: lighten(@purple, 30%);
+@text-color-error: lighten(@red, 30%);
 
 @text-color-ignored: @text-color-subtle;
 @text-color-added: @text-color-success;
 @text-color-renamed: @text-color-info;
-@text-color-modified: @text-color-warning;
+@text-color-modified: @light-blue;
 @text-color-removed: @text-color-error;
 
-@background-color-info: #0098ff;
-@background-color-success: #17ca65;
-@background-color-warning: #ffaa2c;
-@background-color-error: #c00;
-@background-color-highlight: rgba(255, 255, 255, 0.07);
-@background-color-selected: #4182C4;
+@background-color-info: @blue;
+@background-color-success: @green;
+@background-color-warning: @orange;
+@background-color-error: @red;
+@background-color-highlight: @orange;
+@background-color-selected: @orange;
 
-@app-background-color: #333;
+@app-background-color: @dark-blue;
 
-@base-background-color: lighten(@tool-panel-background-color, 5%);
-@base-border-color: rgba(0, 0, 0, 0.5);
+@base-background-color: lighten(@dark-blue, 20%);
+@base-border-color: @dark-blue;
 
 @pane-item-background-color: @base-background-color;
-@pane-item-border-color: rgba(0, 0, 0, 0.5);
+@pane-item-border-color: @dark-blue;
 
-@input-background-color: #212224;
+@input-background-color: @dark-blue;
 @input-border-color: @base-border-color;
 
-@tool-panel-background-color: #1d1f21;
+@tool-panel-background-color: @dark-blue;
 @tool-panel-border-color: @base-border-color;
 
-@inset-panel-background-color: #161719;
+@inset-panel-background-color: @dark-blue;
 @inset-panel-border-color: @base-border-color;
 
-@panel-heading-background-color: #43484d;
+@panel-heading-background-color: @dark-blue;
 @panel-heading-border-color: fadein(@base-border-color, 10%);
 
-@overlay-background-color: #202123;
+@overlay-background-color: @dark-blue;
 @overlay-border-color: @background-color-highlight;
 
-@button-background-color: #43484d;
+@button-background-color: @dark-blue;
 @button-background-color-hover: lighten(@button-background-color, 5%);
-@button-background-color-selected: #5c6064;
+@button-background-color-selected: lighten(@dark-blue, 10%);
 @button-border-color: @base-border-color;
 
-@tab-bar-background-color: #222;
-@tab-bar-border-color: darken(@tab-background-color-active, 10%);
-@tab-background-color: #333;
-@tab-background-color-active: #222;
-@tab-border-color: #484848;
+@tab-bar-background-color: @dark-blue;
+@tab-bar-border-color: darken(@tab-background-color, 10%);
+@tab-background-color: @dark-blue;
+@tab-background-color-active: lighten(@dark-blue, 2%);
+@tab-border-color: @dark-blue;
 
-@tree-view-background-color: #303030;
+@tree-view-background-color: @dark-blue;
 @tree-view-border-color: @tool-panel-border-color;
 
-@scrollbar-background-color: #222425; // Needs to be opaque -> atom/atom/issues/4578
+@scrollbar-background-color: @light-blue; // Needs to be opaque -> atom/atom/issues/4578
 @scrollbar-color: rgba(92, 92, 92, 0.5);
 
 @ui-site-color-1: @background-color-success; // green
@@ -72,7 +84,7 @@
 
 // Sizes
 
-@font-size: 11px;
+@font-size: 14px;
 @input-font-size: 14px;
 
 @disclosure-arrow-size: 12px;
@@ -80,12 +92,12 @@
 @component-padding: 10px;
 @component-icon-padding: 5px;
 @component-icon-size: 16px;
-@component-line-height: 25px;
-@component-border-radius: 2px;
+@component-line-height: 28px;
+@component-border-radius: 0px;
 
-@tab-height: 26px;
+@tab-height: 44px;
 
 
 // Other
 
-@font-family: 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
+@font-family: 'Open Sans', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
